<resources>
    <string name="app_name">Android</string>
    <string name="bt_retrofit2">retrofit2</string>
    <string name="bt_animation">animation</string>
    <string name="bt_rxjava2">rxjava2</string>
    <string name="bt_FlowabkeSubscriber">RxJava2 FlowableSubscriber</string>
    <string name="flowablesubscript_actions">flowableSubscript Actions</string>
    <string name="observablesubscript">ObservableSubscript</string>
    <string name="smartTable">SmartTable</string>
    <string name="lznby_demo">Lznby的Demo</string>
    <string name="codedog_demo">codeDog 的 Demo</string>
    <string name="fragment_base_use">Fragment的基本使用</string>
    <string name="buffer_long_touch_event">黄油刀绑定长按事件</string>
    <string name="buffer_short_click_event">黄油刀绑定点击事件</string>
    <string name="fragment">Fragment</string>
    <string name="fragment_base_used">Fragment 的基本使用</string>
    <string name="recycle_view_multi_type">RecycleView的多类型item使用</string>
    <string name="recycle_view">RecycleView 多类型使用</string>
    <string name="fragment_viewpager">fragment结合viewpager</string>
    <string name="fragment_fragment_viewpager">Fragment传值与Fragment与ViewPager结合使用</string>
    <string name="fragment_recyclerview">Fragment与RecyclerView的结合使用</string>
    <string name="fragment_activity_arguments">Fragment与Activity间使用arguments传值</string>
    <string name="dialogfragment">DialogFragment的简单使用</string>
    <string name="okhttp">okhttp的基本使用</string>
    <string name="synchronous_get">Synchronous(同步) get</string>
    <string name="asynchronous">Asynchronous(异步)</string>
    <string name="okhttp_show">okhttp基本使用</string>
    <string name="show_response">展示网络请求结果</string>
    <string name="accessing_headers">Accessing Headers</string>
    <string name="post_a_string">Post A String</string>
    <string name="post_streaming">Post Streaming</string>
    <string name="post_file">Post a File</string>
    <string name="posting_form_parameters">Posting form parameters</string>
    <string name="posting_multipart_request">Posting a multipart request</string>
    <string name="parse_a_json_response_with_moshi">Parse a JSON Response With Moshi</string>
    <string name="response_caching">Response Caching</string>
    <string name="canceling_call">Canceling a Call</string>
    <string name="timeouts">timeouts</string>
    <string name="per_call_configuration">Per-call Configuration</string>
    <string name="handling_authentication">Handling authentication</string>
    <string name="application_interceptor">Application Interceptor</string>
    <string name="rewriting_requests">Rewriting Requests</string>
    <string name="rewriting_responses">Rewriting Responses</string>
    <string name="network_interceptor">Network Interceptor</string>
    <string name="https_request_1">Https Request 1</string>
    <string name="https_request_2">Https Request 2</string>
    <string name="certificate_pinning">固定证书使用</string>
    <string name="event_listener">Event Listener(添加监听)</string>
    <string name="even_listener_factory">Event Listener Factory</string>
</resources>
