<?xml version="1.0" encoding="utf-8"?>
<!-- fragment 使用的入口界面 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_fragment_base_use"
                android:text="@string/fragment_base_used"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_viewpager_intent"
                android:text="@string/fragment_fragment_viewpager"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_fragment_recycler_view"
                android:text="@string/fragment_recyclerview"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_fragment_arguments"
                android:text="@string/fragment_activity_arguments"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_dialog_fragment"
                android:text="@string/dialogfragment"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>