<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_retrofit"
                android:text="@string/bt_retrofit2"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/bt_animation"
                android:id="@+id/bt_animation"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/bt_rxjava2"
                android:id="@+id/bt_rxjava2"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>