<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- rxjava2 -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="RxJava2"
                android:gravity="center"
                android:id="@+id/tv_rxjava2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_rxjava2_1"
                android:text="@string/bt_FlowabkeSubscriber"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/bt_rxjava2_2"
                android:text="@string/flowablesubscript_actions"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/bt_rxjava2_3"
                android:text="@string/observablesubscript"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button
                android:id="@+id/bt_rxjava2_4"
                android:text=""
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/bt_rxjava2_5"
                android:text=""
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>